add react router to main component

--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -1,7 +1,9 @@
 .main {
     background-color: #fff;
     height: 75vh;
-    min-width: 75vw;
+    /* min-width subject to change */
+    min-width: 600px;
+    width: 75vw;
     border-radius: 20px;
     -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
